LPS-202453 patch the changes to make this jar Java 8 compatible